[package]
name = "rust-cycle"
version = "0.1.0"
authors = ["Nathan Fairhurst. <nathan.p3pictures@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
btleplug = { git = "https://github.com/IamfromSpace/btleplug.git", rev = "5fdb3ebbef34b849", features = ["serde"] }
sled = "0.31"
env_logger = "0.7"
rppal = "0.11"
glyph_brush_layout = "0.1"
chrono = "0.4"
nmea0183 = { git = "https://github.com/IamfromSpace/nmea0183.git", rev = "66e205d97438bf07", features = ["serde"] }
serde = "1.0"
