[package]
name = "rust-cycle"
version = "0.2.0"
authors = ["Nathan Fairhurst. <nathan.p3pictures@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
btleplug = { git = "https://github.com/IamfromSpace/btleplug.git", rev = "5fdb3ebbef34b849", features = ["serde"] }
sled = "0.31"
env_logger = "0.7"
rppal = "0.11"
chrono = "0.4"
nmea0183 = { git = "https://github.com/IamfromSpace/nmea0183.git", rev = "66e205d97438bf07", features = ["serde"] }
serde = "1.0"
git-version = "0.3"
embedded-graphics = "0.6"
embedded-graphics-simulator = { version = "0.2", optional = true }
tiny_http = "0.6"
nom = "5.1"
xi-unicode = "0.2"

[features]
simulator =  ["embedded-graphics-simulator"]
