[package]
name = "rust-cycle"
version = "0.2.0"
authors = ["Nathan Fairhurst. <nathan.p3pictures@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "1.2"
btleplug = { features = ["serde"], version = "0.11.5" }
sled = "0.31"
env_logger = "0.7"
rppal = "0.11"
chrono = "0.4"
nmea0183 = { git = "https://github.com/IamfromSpace/nmea0183.git", rev = "66e205d97438bf07", features = ["serde"] }
serde = "1.0"
git-version = "0.3"
embedded-graphics = "0.6"
embedded-graphics-simulator = { version = "0.2", optional = true }
tiny_http = "0.6"
nom = "5.1"
xi-unicode = "0.2"
uuid = "1.7.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

[features]
simulator =  ["embedded-graphics-simulator"]
